Address approval, redirect bugs
Fix approval card not showing and redirect not occuring when
user is unauthorized.

--- a/client/src/containers/requester/role/RoleApproval.css
+++ b/client/src/containers/requester/role/RoleApproval.css
@@ -1,4 +1,3 @@
-
 /* Copyright 2018 Contributors to Hyperledger Sawtooth
 
 Licensed under the Apache License, Version 2.0 (the "License");
@@ -15,33 +14,43 @@ limitations under the License.
 ----------------------------------------------------------------------------- */
 
 
-import React from 'react';
-import ReactDOM from 'react-dom';
-import { Provider } from 'react-redux';
-import { BrowserRouter } from 'react-router-dom';
+#next-role-approval-container {
+  margin: 0 auto;
+  padding: 0 0 10px 0;
+}
 
+#next-role-approval-container .ui.fluid.card {
+  background: transparent;
+  border-radius: 0;
+}
 
-import * as customStore from '../../customStore';
-import Pack from './Pack';
+#next-role-approval-status-emoji {
+  font-size: 4.3em;
+}
 
+#next-role-approval-status {
+  padding: 130px 0 20px 0;
+  text-align: center;
+}
 
-const store = customStore.create();
+#next-role-approval-open {
+  color: #ffb338;
+}
 
+#next-role-approval-rejected {
+  color: red;
+}
 
-it('renders without crashing', () => {
-  const div = document.createElement('div');
+#next-role-approval-status h3 {
+  margin-top: 10px;
+}
 
-  const props = {
-    getPack: () => {},
-    packFromId: () => {},
-    match: { params: {} },
-  };
+#next-role-approval-approver {
+  color: black;
+  font-weight: bold;
+}
 
-  ReactDOM.render(
-    <Provider store={store}>
-      <BrowserRouter><Pack {...props}/></BrowserRouter>
-    </Provider>, div
-  );
-
-  ReactDOM.unmountComponentAtNode(div);
-});
+#next-role-approval-details {
+  font-size: .9em;
+  text-align: center;
+}
